--- a/css/shortener.css
+++ b/css/shortener.css
@@ -3,8 +3,8 @@
   }
 
 body {
-    margin: 0;
-    /* font-family: 'Poppins', sans-serif; */
+    /* margin: 0; */
+    font-family: 'Poppins', sans-serif; 
     background: #5C47CC;
     background: -webkit-linear-gradient(top left, #5C47CC, #919AD6);
     background: -moz-linear-gradient(top left, #5C47CC, #919AD6);
