--- a/css/yt.css
+++ b/css/yt.css
@@ -1,96 +1,82 @@
 * {
-    text-decoration: none;  
-    list-style-type:none;
-    margin:0; 
-    padding:0;
-  }
-
+  box-sizing: border-box;
+}
 
 body {
-    width: 100%;
-    margin: 0;
+  margin:0;
+  font-family: "Poppins", sans-serif;
 }
 
-
-
-.nav-con {
-    background-color: #333; 
-    /* use display flex and space-between */ 
-    display: flex; 
-    justify-content: space-between; 
-    padding: 20px 0;
-    
+html {
+  height: 100%;
 }
 
-#logo {
-    margin-left: 10px;
+#logo-text {
+  font-size: 1.6rem;
+  text-align: center;
+  margin: 50px auto;
+  text-decoration: underline;
+  text-underline-offset: .6rem;
 }
 
-nav ul {
-    display: flex; 
-  } 
-  nav ul li{ 
-    margin: 0 12px;
-  }  
-  nav ul li a{
-    transition: 0.2s ease-in;
-  }
+.download {
+  margin: 25px auto;
+  text-align: center; 
+}
+
+#url, #url-button {
+  height: 40px;
+}
+
+#url {
+  max-width: 500px;
+  width: 50%;
   
-  nav ul li a:hover{
-    color: red;  
-  } 
+}
 
-  .container {
-    margin: 4rem auto;
-    width: 80%;
-    text-align: center;
-    border : 1px solid rgb(189, 166, 166);
-    border-radius: 6px;
+#url, #url-button {
+  border: 0;
+  border-radius: 4px;
+  background-color: rgba(255, 0, 0, 0.479);
+  padding: 8px;
+  color: white;
+  outline: none;
+  font-size: 16px;
+}
+
+#url-button {
+  max-width: 100px;
+  width: 10%;
+}
+
+p {
+ text-align: center ;
+  font-size: 15px;
+}
+
+
+#note {
+  margin-top: 12rem;
+  font-size: 20px;
+  color: #fff;
+  animation: glow 1s ease-in-out infinite alternate;
+}
+
+@keyframes glow {
+  from {
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #0073e6, 0 0 20px #0073e6, 0 0 25px #0073e6, 0 0 30px #0073e6, 0 0 35px #0073e6;
   }
-
-
-
-  h1 {
-    margin: 20px;
+  to {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #0073e6, 0 0 40px #0073e6, 0 0 50px #0073e6, 0 0 60px #0073e6, 0 0 70px #0073e6;
   }
-
-  #url {
-    height: inherit;
-   width: 90%;
-   outline: none;
-   border: 0;
-   padding-left: 10px;
-   font-size: large;
-
-  }
-
-  #url-dload {
-    width: 10%;
-    height: 100%;
-    height: inherit;
-    margin-left: 0;
-    border: 0;
-    background-color: rgb(241, 66, 66);
-    transition: .5s;
-  }
-
-  #url-dload:hover {
-    background-color: rgb(199, 5, 5);
-  }
+}
 
 
-  .input {
-    display: inline-flex;
-    width: 70%;
-    height: 20px;
-    height: 50px;
-    margin: 10px;
-    border: 4px solid rgb(240, 75, 75);
-    border-radius: 5px;
-    overflow: hidden;
+.note-nest {
+  background-color: #375a8b;
+  color: #dfe0e4;
+}
 
-  }
-
-  p {
-    margin: 10px;
-  }
+.thumbnail {
+  border-radius: 4px;
+}
