--- a/css/yt.css
+++ b/css/yt.css
@@ -98,7 +98,6 @@ form > p {
 }
 
 #downloads {
-  font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
   width: 50%;
 
@@ -214,6 +213,22 @@ form > p {
   padding-top: 10px;
   padding-bottom: 10px;
   text-align: left;
-  background-color: #04AA6D;
+  background-color: #2eb885ea;
   color: white;
 }
+
+.btn {
+	width: 100%;
+    height: 35px;
+	cursor: pointer;
+  	border-radius: 4px;
+    border: 0;
+    color: white;
+    background-color: rgba(117, 175, 9, 0.801);
+}
+
+
+.btn:hover {
+	background-color: rgba(129, 155, 57, 0.952);
+    transition: .8s;
+	}
